--- a/.github/workflows/Greet.yaml
+++ b/.github/workflows/Greet.yaml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   greet:
-    runs-on: ubuntu-lateest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: ./
