--- a/.github/workflows/Greet.yaml
+++ b/.github/workflows/Greet.yaml
@@ -12,6 +12,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: ./
+      - uses: ./printer1/
         with:
           who-to-greet: ${{ inputs.who-to-greet }}
