--- a/.github/workflows/Greet.yaml
+++ b/.github/workflows/Greet.yaml
@@ -11,7 +11,7 @@ jobs:
   greet:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      #- uses: actions/checkout@v4
       - uses: ./printer1
         with:
           who-to-greet: ${{ inputs.who-to-greet }}
